[package]
name = "play-rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.6.1"
pem-rfc7468 = "0.3.1"
ripemd = "0.1.1"
hex = "0.4.3"
rand = "0.8.5"
clap = { version = "3.2", features = ["derive"] }
